--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,4 +1,30 @@
-apiVersion: v1
-description: Chart for installing cortex.
+apiVersion: v2
+version: 0.1.2
+appVersion: v1.1.0
+description: 'Cortex'
+engine: gotpl
+home: https://cortexmetrics.io/
+icon: https://avatars2.githubusercontent.com/u/43045022?s=200&v=4
+kubeVersion: ^1.10.0-0
+maintainers:
+- email: roberto.previtera@gmail.com
+  name: Roberto Previtera
 name: cortex
-version: 0.0.1
+sources:
+- https://github.com/previ/cortex-helm-chart
+dependencies:
+  - name: memcached
+    alias: memcached
+    version: 3.2.3
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: memcached.enabled
+  - name: memcached
+    alias: memcached-index-read
+    version: 3.2.3
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: memcached-index-read.enabled
+  - name: memcached
+    alias: memcached-index-write
+    version: 3.2.3
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: memcached-index-write.enabled
