--- a/templates/distributor-dep.yaml
+++ b/templates/distributor-dep.yaml
@@ -1,48 +1,104 @@
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}-distributor
+  name: {{ template "cortex.fullname" . }}-distributor
+  namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "cortex.name" . }}-distributor
+    chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    cortex: distributor
+  annotations:
+    {{- toYaml .Values.distributor.annotations | nindent 4 }}
 spec:
   replicas: {{ .Values.distributor.replicas }}
-  strategy:
-    rollingUpdate:
-      maxUnavailable: 1
   selector:
     matchLabels:
-      app: {{ template "name" . }}-distributor
+      app: {{ template "cortex.name" . }}-distributor
       release: {{ .Release.Name }}
+  strategy:
+    {{- toYaml .Values.distributor.strategy | nindent 4 }}
   template:
     metadata:
       labels:
-        app: {{ template "name" . }}-distributor
+        app: {{ template "cortex.name" . }}-distributor
+        name: {{ template "cortex.name" . }}-distributor
+        target: distributor
         release: {{ .Release.Name }}
-        cortex: distributor
-    {{- with .Values.distributor.podAnnotations }}
+        {{- with .Values.distributor.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       annotations:
-{{ toYaml . | indent 8 }}
-    {{- end }}
+        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- with .Values.distributor.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
-      tolerations:
-{{ toYaml .Values.distributor.tolerations | indent 8 }}
-      affinity:
-{{ toYaml .Values.distributor.affinity | indent 8 }}
+      serviceAccountName: {{ template "cortex.serviceAccountName" . }}
+    {{- if .Values.distributor.priorityClassName }}
+      priorityClassName: {{ .Values.distributor.priorityClassName }}
+    {{- end }}
+      securityContext:
+        {{- toYaml .Values.distributor.securityContext | nindent 8 }}
+      initContainers:
+        {{- toYaml .Values.distributor.initContainers | nindent 8 }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       containers:
-      - name: distributor
-        image: "{{ .Values.distributor.image.repository }}:{{ .Values.distributor.image.tag }}"
-        imagePullPolicy: IfNotPresent
-        args:
-        - -log.level=debug
-        - -server.http-listen-port=80
-        - -consul.hostname={{ template "fullname" . }}-consul.{{ .Release.Namespace }}.svc.cluster.local:8500
-        - -distributor.replication-factor={{ .Values.replicationFactor }}
-        ports:
-        - containerPort: 80
-          name: http
-        resources:
-{{ toYaml .Values.distributor.resources | indent 10 }}
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - "-target=distributor"
+            - "-config.file=/etc/cortex/cortex.yaml"
+          {{- range $key, $value := .Values.distributor.extraArgs }}
+            - "-{{ $key }}={{ $value }}"
+          {{- end }}
+          volumeMounts:
+            {{- if .Values.distributor.extraVolumeMounts }}
+              {{ toYaml .Values.distributor.extraVolumeMounts | nindent 12}}
+            {{- end }}
+            - name: config
+              mountPath: /etc/cortex
+            - name: storage
+              mountPath: "/data"
+              subPath: {{ .Values.distributor.persistence.subPath }}
+          ports:
+            - name: http-metrics
+              containerPort: {{ .Values.config.server.http_listen_port }}
+              protocol: TCP
+          livenessProbe:
+            {{- toYaml .Values.distributor.livenessProbe | nindent 12 }}
+          readinessProbe:
+            {{- toYaml .Values.distributor.readinessProbe | nindent 12 }}
+          resources:
+            {{- toYaml .Values.distributor.resources | nindent 12 }}
+          securityContext:
+            readOnlyRootFilesystem: true
+          env:
+            {{- if .Values.distributor.env }}
+              {{- toYaml .Values.distributor.env | nindent 12 }}
+            {{- end }}
+{{- if .Values.distributor.extraContainers }}
+{{ toYaml .Values.distributor.extraContainers | indent 8}}
+{{- end }}
+      nodeSelector:
+        {{- toYaml .Values.distributor.nodeSelector | nindent 8 }}
+      affinity:
+        {{- toYaml .Values.distributor.affinity | nindent 8 }}
+      tolerations:
+        {{- toYaml .Values.distributor.tolerations | nindent 8 }}
+      terminationGracePeriodSeconds: {{ .Values.distributor.terminationGracePeriodSeconds }}
+      volumes:
+        - name: config
+          secret:
+            secretName: {{ template "cortex.fullname" . }}
+{{- if .Values.distributor.extraVolumes }}
+{{ toYaml .Values.distributor.extraVolumes | indent 8}}
+{{- end }}
+        - name: storage
+          emptyDir: {}
