--- a/templates/distributor-svc.yaml
+++ b/templates/distributor-svc.yaml
@@ -1,18 +1,25 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-distributor
+  name: {{ template "cortex.fullname" . }}-distributor
+  namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "cortex.name" . }}-distributor
+    chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    cortex: distributor
+    {{- with .Values.distributor.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- toYaml .Values.distributor.annotations | nindent 4 }}
 spec:
+  type: ClusterIP
   ports:
-    - port: 80
-      name: http
-      targetPort: http
+    - port: {{ .Values.distributor.service.port }}
+      protocol: TCP
+      name: http-metrics
+      targetPort: http-metrics
   selector:
-    app: {{ template "name" . }}-distributor
+    app: {{ template "cortex.name" . }}-distributor
     release: {{ .Release.Name }}
