--- a/templates/querier-dep.yaml
+++ b/templates/querier-dep.yaml
@@ -1,97 +1,111 @@
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}-querier
+  name: {{ template "cortex.fullname" . }}-querier
+  namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "cortex.name" . }}-querier
+    chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    cortex: querier
+  annotations:
+    {{- toYaml .Values.querier.annotations | nindent 4 }}
 spec:
   replicas: {{ .Values.querier.replicas }}
-  strategy:
-    rollingUpdate:
-      maxUnavailable: 1
   selector:
     matchLabels:
-      app: {{ template "name" . }}-querier
+      app: {{ template "cortex.name" . }}-querier
       release: {{ .Release.Name }}
+  strategy:
+    {{- toYaml .Values.querier.strategy | nindent 4 }}
   template:
     metadata:
       labels:
-        app: {{ template "name" . }}-querier
+        app: {{ template "cortex.name" . }}-querier
+        name: {{ template "cortex.name" . }}-querier
+        target: distributor
         release: {{ .Release.Name }}
-        cortex: querier
-    {{- with .Values.querier.podAnnotations }}
-      annotations:
-{{ toYaml . | indent 8 }}
-    {{- end }}
-    spec:
-      tolerations:
-{{ toYaml .Values.querier.tolerations | indent 8 }}
-      affinity:
-{{ toYaml .Values.querier.affinity | indent 8 }}
-      containers:
-      - name: querier
-        image: "{{ .Values.querier.image.repository }}:{{ .Values.querier.image.tag }}"
-        imagePullPolicy: IfNotPresent
-        args:
-        - -server.http-listen-port=80
-        - -consul.hostname={{ template "fullname" . }}-consul.{{ .Release.Namespace }}.svc.cluster.local:8500
-        # - -querier.frontend-address={{ template "fullname" . }}-query-frontend.{{ .Release.Namespace }}.svc.cluster.local:9095
-        - -querier.query-ingesters-within={{ .Values.querier.queryIngestersWithin }}
-        - -dynamodb.original-table-name={{ index .Values "dynamodb" "original-table-name" }}
-        {{ if not .Values.dynamodbLocal.enabled -}}
-        {{ if .Values.aws.stsEnabled -}}
-        - -dynamodb.url=dynamodb://$(AWS_DEFAULT_REGION)
-        {{- else -}}
-        - -dynamodb.url=dynamodb://$(USER_NAME):$(USER_PASSWORD)@$(AWS_DEFAULT_REGION)
-        {{- end -}}
-        {{- else -}}
-        - -dynamodb.url=dynamodb://user:pass@{{ template "fullname" .}}-dynamodb.{{ .Release.Namespace }}.svc.cluster.local:8000
+        {{- with .Values.querier.podLabels }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
-
-        {{ if eq .Values.s3.type "local" }}
-        - -s3.url=s3://$(USER_NAME):$(USER_PASSWORD)@{{ .Values.s3.bucketName }}
-        {{ else }}
-        {{ if .Values.aws.stsEnabled }}
-        - -s3.url=s3://{{ .Values.s3.bucketName }}
-        {{ else }}
-        - -s3.url=s3://$(USER_NAME):$(USER_PASSWORD)@{{ .Values.s3.bucketName }}
-        {{ end }}
-        {{ end }}
-{{ include "cortex.tableargs" . | indent 8 }}
-{{ include "cortex.memcachedArgs" . | indent 8 }}
-{{ include "cortex.storeIndexMemcachedArgs" . | indent 8 }}
-        - -distributor.replication-factor={{ .Values.replicationFactor }}
-        - -querier.batch-iterators
-        - -querier.ingester-streaming
-        - -querier.max-concurrent={{ .Values.querier.maxConcurrent }}
-        ports:
-        - containerPort: 80
-          name: http
-        env:
-          - name: AWS_DEFAULT_REGION
-          {{ if .Values.aws.stsEnabled -}}
-            value: "{{ .Values.aws.region }}"
-          {{- else }}
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: AWS_DEFAULT_REGION
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- with .Values.querier.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
+    spec:
+      serviceAccountName: {{ template "cortex.serviceAccountName" . }}
+    {{- if .Values.querier.priorityClassName }}
+      priorityClassName: {{ .Values.querier.priorityClassName }}
+    {{- end }}
+      securityContext:
+        {{- toYaml .Values.querier.securityContext | nindent 8 }}
+      initContainers:
+        {{- toYaml .Values.querier.initContainers | nindent 8 }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
+      containers:
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - "-target=querier"
+            - "-config.file=/etc/cortex/cortex.yaml"
+            - "-querier.frontend-address={{ template "cortex.fullname" . }}-query-frontend-headless.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.query_frontend.service.grpc_port}}"
+            {{- if .Values.memcached.enabled }}
+            - "-store.chunks-cache.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached.{{ .Release.Namespace }}.svc.cluster.local:11211"
+            {{- end }}
+            {{- if index .Values "memcached-index-read" "enabled" }}
+            - "-store.index-cache-read.memcached.addresses=dns+{{ template "cortex.fullname" . }}-memcached-index-read.{{ .Release.Namespace }}.svc.cluster.local:11211"
+            {{- end }}
+          {{- range $key, $value := .Values.querier.extraArgs }}
+            - "-{{ $key }}={{ $value }}"
           {{- end }}
-          {{ if not .Values.aws.stsEnabled -}}
-          - name: USER_NAME
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: USER_NAME
-          - name: USER_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: USER_PASSWORD
-          {{- end }}
-        resources:
-{{ toYaml .Values.querier.resources | indent 10 }}
+          volumeMounts:
+            {{- if .Values.querier.extraVolumeMounts }}
+              {{ toYaml .Values.querier.extraVolumeMounts | nindent 12}}
+            {{- end }}
+            - name: config
+              mountPath: /etc/cortex
+            - name: storage
+              mountPath: "/data"
+              subPath: {{ .Values.querier.persistence.subPath }}
+          ports:
+            - name: http-metrics
+              containerPort: {{ .Values.config.server.http_listen_port }}
+              protocol: TCP
+          livenessProbe:
+            {{- toYaml .Values.querier.livenessProbe | nindent 12 }}
+          readinessProbe:
+            {{- toYaml .Values.querier.readinessProbe | nindent 12 }}
+          resources:
+            {{- toYaml .Values.querier.resources | nindent 12 }}
+          securityContext:
+            readOnlyRootFilesystem: true
+          env:
+            {{- if .Values.querier.env }}
+              {{- toYaml .Values.querier.env | nindent 12 }}
+            {{- end }}
+{{- if .Values.querier.extraContainers }}
+{{ toYaml .Values.querier.extraContainers | indent 8}}
+{{- end }}
+      nodeSelector:
+        {{- toYaml .Values.querier.nodeSelector | nindent 8 }}
+      affinity:
+        {{- toYaml .Values.querier.affinity | nindent 8 }}
+      tolerations:
+        {{- toYaml .Values.querier.tolerations | nindent 8 }}
+      terminationGracePeriodSeconds: {{ .Values.querier.terminationGracePeriodSeconds }}
+      volumes:
+        - name: config
+          secret:
+            secretName: {{ template "cortex.fullname" . }}
+{{- if .Values.querier.extraVolumes }}
+{{ toYaml .Values.querier.extraVolumes | indent 8}}
+{{- end }}
+        - name: storage
+          emptyDir: {}
