--- a/templates/ruler-svc.yaml
+++ b/templates/ruler-svc.yaml
@@ -1,20 +1,25 @@
----
-{{- if .Values.ruler.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-ruler
+  name: {{ template "cortex.fullname" . }}-ruler
+  namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "cortex.name" . }}-ruler
+    chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    cortex: ruler
+    {{- with .Values.ruler.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
+  annotations:
+    {{- toYaml .Values.ruler.annotations | nindent 4 }}
 spec:
+  type: ClusterIP
   ports:
-    - port: 80
-      name: http
-      targetPort: http
+    - port: {{ .Values.ruler.service.port }}
+      protocol: TCP
+      name: http-metrics
+      targetPort: http-metrics
   selector:
-    app: {{ template "name" . }}-ruler
+    app: {{ template "cortex.name" . }}-ruler
     release: {{ .Release.Name }}
-{{- end }}
