--- a/templates/table-manager-dep.yaml
+++ b/templates/table-manager-dep.yaml
@@ -1,147 +1,103 @@
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}-table-manager
+  name: {{ template "cortex.fullname" . }}-table-manager
+  namespace: {{ .Release.Namespace }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    app: {{ template "cortex.name" . }}-table-manager
+    chart: {{ template "cortex.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
-    cortex: table-manager
+  annotations:
+    {{- toYaml .Values.table_manager.annotations | nindent 4 }}
 spec:
-  replicas: 1
+  replicas: {{ .Values.table_manager.replicas }}
   selector:
     matchLabels:
-      app: {{ template "name" . }}-table-manager
+      app: {{ template "cortex.name" . }}-table-manager
       release: {{ .Release.Name }}
+  strategy:
+    {{- toYaml .Values.table_manager.strategy | nindent 4 }}
   template:
     metadata:
       labels:
-        app: {{ template "name" . }}-table-manager
+        app: {{ template "cortex.name" . }}-table-manager
+        name: {{ template "cortex.name" . }}-table-manager
         release: {{ .Release.Name }}
-        cortex: table-manager
-    {{- with .Values.tablemanager.podAnnotations }}
+        {{- with .Values.table_manager.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       annotations:
-{{ toYaml . | indent 8 }}
-    {{- end }}
+        checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+        {{- with .Values.table_manager.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
-      tolerations:
-{{ toYaml .Values.tablemanager.tolerations | indent 8 }}
-      affinity:
-{{ toYaml .Values.tablemanager.affinity | indent 8 }}
+      serviceAccountName: {{ template "cortex.serviceAccountName" . }}
+    {{- if .Values.table_manager.priorityClassName }}
+      priorityClassName: {{ .Values.table_manager.priorityClassName }}
+    {{- end }}
+      securityContext:
+        {{- toYaml .Values.table_manager.securityContext | nindent 8 }}
+      initContainers:
+        {{- toYaml .Values.table_manager.initContainers | nindent 8 }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+      {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+      {{- end}}
+      {{- end }}
       containers:
-      - name: table-manager
-        image: "{{ .Values.tablemanager.image.repository }}:{{ .Values.tablemanager.image.tag }}"
-        imagePullPolicy: IfNotPresent
-        args:
-        - -server.http-listen-port=80
-        - "-dynamodb.original-table-name={{ .Values.dynamodb.originalTableName }}"
-        - "-dynamodb.periodic-table.inactive-read-throughput={{.Values.dynamodb.tableConfigs.periodic.inactiveReadThroughput.base}}"
-        - "-dynamodb.periodic-table.inactive-write-throughput={{.Values.dynamodb.tableConfigs.periodic.inactiveWriteThroughput.base}}"
-
-        - "-dynamodb.periodic-table.read-throughput={{.Values.dynamodb.tableConfigs.periodic.readThroughput.base}}"
-        - "-dynamodb.periodic-table.write-throughput={{.Values.dynamodb.tableConfigs.periodic.writeThroughput.base}}"
-
-        - "-dynamodb.chunk-table.inactive-read-throughput={{.Values.dynamodb.tableConfigs.chunk.inactiveReadThroughput.base}}"
-        - "-dynamodb.chunk-table.inactive-write-throughput={{.Values.dynamodb.tableConfigs.chunk.inactiveWriteThroughput.base}}"
-
-        - "-dynamodb.chunk-table.read-throughput={{.Values.dynamodb.tableConfigs.chunk.readThroughput.base}}"
-        - "-dynamodb.chunk-table.write-throughput={{.Values.dynamodb.tableConfigs.chunk.writeThroughput.base}}"
-
-        {{ if not .Values.dynamodbLocal.enabled -}}
-
-        {{- if .Values.aws.stsEnabled -}}
-        - -dynamodb.url=dynamodb://$(AWS_DEFAULT_REGION)
-        - -applicationautoscaling.url=autoscaling://$(AWS_DEFAULT_REGION)
-        {{- else -}}
-        - -dynamodb.url=dynamodb://$(USER_NAME):$(USER_PASSWORD)@$(AWS_DEFAULT_REGION)
-        - -applicationautoscaling.url=autoscaling://$(USER_NAME):$(USER_PASSWORD)@$(AWS_DEFAULT_REGION)
-        {{- end -}}
-
-        {{- if .Values.dynamodb.tableConfigs.periodic.inactiveWriteThroughput.scale.enabled }}
-        - -dynamodb.periodic-table.inactive-write-throughput.scale.enabled
-        - "-dynamodb.periodic-table.inactive-write-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.periodic.inactiveWriteThroughput.scale.minCapacity}}"
-        - "-dynamodb.periodic-table.inactive-write-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.periodic.writeThroughput.scale.enabled }}
-        - -dynamodb.periodic-table.write-throughput.scale.enabled
-        - "-dynamodb.periodic-table.write-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.periodic.writeThroughput.scale.minCapacity}}"
-        - "-dynamodb.periodic-table.write-throughput.scale.max-capacity={{.Values.dynamodb.tableConfigs.periodic.writeThroughput.scale.maxCapacity}}"
-        - "-dynamodb.periodic-table.write-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.chunk.inactiveWriteThroughput.scale.enabled }}
-        - -dynamodb.chunk-table.inactive-write-throughput.scale.enabled
-        - "-dynamodb.chunk-table.inactive-write-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.chunk.inactiveWriteThroughput.scale.minCapacity}}"
-        - "-dynamodb.chunk-table.inactive-write-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.chunk.writeThroughput.scale.enabled }}
-        - -dynamodb.chunk-table.write-throughput.scale.enabled
-        - "-dynamodb.chunk-table.write-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.chunk.writeThroughput.scale.minCapacity}}"
-        - "-dynamodb.chunk-table.write-throughput.scale.max-capacity={{.Values.dynamodb.tableConfigs.chunk.writeThroughput.scale.maxCapacity}}"
-        - "-dynamodb.chunk-table.write-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.periodic.inactiveReadThroughput.scale.enabled }}
-        - -dynamodb.periodic-table.inactive-read-throughput.scale.enabled
-        - "-dynamodb.periodic-table.inactive-read-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.periodic.inactiveReadThroughput.scale.minCapacity}}"
-        - "-dynamodb.periodic-table.inactive-read-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.periodic.readThroughput.scale.enabled }}
-        - -dynamodb.periodic-table.read-throughput.scale.enabled
-        - "-dynamodb.periodic-table.read-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.periodic.readThroughput.scale.minCapacity}}"
-        - "-dynamodb.periodic-table.read-throughput.scale.max-capacity={{.Values.dynamodb.tableConfigs.periodic.readThroughput.scale.maxCapacity}}"
-        - "-dynamodb.periodic-table.read-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.chunk.inactiveReadThroughput.scale.enabled }}
-        - -dynamodb.chunk-table.inactive-read-throughput.scale.enabled
-        - "-dynamodb.chunk-table.inactive-read-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.chunk.inactiveReadThroughput.scale.minCapacity}}"
-        - "-dynamodb.chunk-table.inactive-read-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- if .Values.dynamodb.tableConfigs.chunk.readThroughput.scale.enabled }}
-        - -dynamodb.chunk-table.read-throughput.scale.enabled
-        - "-dynamodb.chunk-table.read-throughput.scale.min-capacity={{.Values.dynamodb.tableConfigs.chunk.readThroughput.scale.minCapacity}}"
-        - "-dynamodb.chunk-table.read-throughput.scale.max-capacity={{.Values.dynamodb.tableConfigs.chunk.readThroughput.scale.maxCapacity}}"
-        - "-dynamodb.chunk-table.read-throughput.scale.role-arn={{ .Values.dynamodb.autoScalingRoleARN }}"
-        {{- end }}
-
-        {{- else -}}
-        - -dynamodb.url=dynamodb://user:pass@{{ template "fullname" .}}-dynamodb.{{ .Release.Namespace }}.svc.cluster.local:8000
-        {{- end }}
-{{ include "cortex.tableargs" . | indent 8 }}
-        {{- if .Values.tablemanager.retention.deletesEnabled }}
-        - -table-manager.retention-deletes-enabled={{ .Values.tablemanager.retention.deletesEnabled }}
-        - -table-manager.retention-period={{ .Values.tablemanager.retention.period }}
-        {{- end }}
-        ports:
-        - containerPort: 80
-          name: http
-        env:
-          - name: AWS_DEFAULT_REGION
-          {{ if .Values.aws.stsEnabled -}}
-            value: "{{ .Values.aws.region }}"
-          {{- else }}
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: AWS_DEFAULT_REGION
+        - name: {{ .Chart.Name }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - "-target=table-manager"
+            - "-config.file=/etc/cortex/cortex.yaml"
+          {{- range $key, $value := .Values.table_manager.extraArgs }}
+            - "-{{ $key }}={{ $value }}"
           {{- end }}
-          {{ if not .Values.aws.stsEnabled -}}
-          - name: USER_NAME
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: USER_NAME
-          - name: USER_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: cortex-aws-creds
-                key: USER_PASSWORD
-          {{- end }}
-        resources:
-{{ toYaml .Values.tablemanager.resources | indent 10 }}
+          volumeMounts:
+            {{- if .Values.table_manager.extraVolumeMounts }}
+              {{ toYaml .Values.table_manager.extraVolumeMounts | nindent 12}}
+            {{- end }}
+            - name: config
+              mountPath: /etc/cortex
+            - name: storage
+              mountPath: "/data"
+              subPath: {{ .Values.table_manager.persistence.subPath }}
+          ports:
+            - name: http-metrics
+              containerPort: {{ .Values.config.server.http_listen_port }}
+              protocol: TCP
+          livenessProbe:
+            {{- toYaml .Values.table_manager.livenessProbe | nindent 12 }}
+          readinessProbe:
+            {{- toYaml .Values.table_manager.readinessProbe | nindent 12 }}
+          resources:
+            {{- toYaml .Values.table_manager.resources | nindent 12 }}
+          securityContext:
+            readOnlyRootFilesystem: true
+          env:
+            {{- if .Values.table_manager.env }}
+              {{- toYaml .Values.table_manager.env | nindent 12 }}
+            {{- end }}
+{{- if .Values.table_manager.extraContainers }}
+{{ toYaml .Values.table_manager.extraContainers | indent 8}}
+{{- end }}
+      nodeSelector:
+        {{- toYaml .Values.table_manager.nodeSelector | nindent 8 }}
+      affinity:
+        {{- toYaml .Values.table_manager.affinity | nindent 8 }}
+      tolerations:
+        {{- toYaml .Values.table_manager.tolerations | nindent 8 }}
+      terminationGracePeriodSeconds: {{ .Values.table_manager.terminationGracePeriodSeconds }}
+      volumes:
+        - name: config
+          secret:
+            secretName: {{ template "cortex.fullname" . }}
+{{- if .Values.table_manager.extraVolumes }}
+{{ toYaml .Values.table_manager.extraVolumes | indent 8}}
+{{- end }}
+        - name: storage
+          emptyDir: {}
