Adding dnsResolver option to nginx.config (#28)
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -766,6 +766,8 @@ configs:
 nginx:
   replicas: 2
   http_listen_port: 80
+  config:
+    dnsResolver: kube-dns.kube-system.svc.cluster.local
   image:
     repository: nginx
     tag: 1.17
