--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -27,7 +27,7 @@ data:
       access_log   /dev/stderr  main;
       sendfile     on;
       tcp_nopush   on;
-      resolver kube-dns.kube-system.svc.cluster.local;
+      resolver {{ default "kube-dns.kube-system.svc.cluster.local" .Values.nginx.config.dnsResolver }};
 
       server { # simple reverse-proxy
         listen {{ .Values.nginx.http_listen_port }};
