--- a/templates/configs-dep.yaml
+++ b/templates/configs-dep.yaml
@@ -104,7 +104,11 @@ spec:
       volumes:
         - name: config
           secret:
+{{- if eq .Values.useExternalConfig }}
+            secretName: {{ .Values.externalConfigSecretName }}
+{{- else }}
             secretName: {{ template "cortex.fullname" . }}
+{{- end }}
         {{- if .Values.configsdb_postgresql.enabled }}
         - name: postgres-password
           secret:
