--- a/templates/ingester-dep.yaml
+++ b/templates/ingester-dep.yaml
@@ -102,7 +102,11 @@ spec:
       volumes:
         - name: config
           secret:
+{{- if eq .Values.useExternalConfig }}
+            secretName: {{ .Values.externalConfigSecretName }}
+{{- else }}
             secretName: {{ template "cortex.fullname" . }}
+{{- end }}
 {{- if .Values.ingester.extraVolumes }}
 {{ toYaml .Values.ingester.extraVolumes | indent 8}}
 {{- end }}
