updating deployment hash of secret template, to only occur if cortex is using the template managed config.yaml
Signed-off-by: Ken Haines <ken@kenhaines.net>

--- a/templates/table-manager-dep.yaml
+++ b/templates/table-manager-dep.yaml
@@ -28,7 +28,9 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
+{{- if not .Values.useExternalConfig }}      
         checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+{{- end}}  
         {{- with .Values.table_manager.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
