--- a/templates/distributor-dep.yaml
+++ b/templates/distributor-dep.yaml
@@ -29,7 +29,9 @@ spec:
         {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
+{{- if not .Values.useExternalConfig }}      
         checksum/config: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
+{{- end}}  
         {{- with .Values.distributor.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
