making nginx an optional component based on an enabled flag in config.yaml
Signed-off-by: Ken Haines <ken@kenhaines.net>

--- a/templates/nginx-config.yaml
+++ b/templates/nginx-config.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.nginx.enabled }}
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -56,3 +57,4 @@ data:
         }
       }
     }
+{{- end}}
