--- a/templates/nginx-dep.yaml
+++ b/templates/nginx-dep.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.nginx.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -96,3 +97,4 @@ spec:
 {{- if .Values.nginx.extraVolumes }}
 {{ toYaml .Values.nginx.extraVolumes | indent 8}}
 {{- end }}
+{{- end}}
