Supporting externally managed Cortex Config (#31)
* enabling option to specify a cortex config created externally to this chart

Signed-off-by: Ken Haines <ken@kenhaines.net>

* updating deployment hash of secret template, to only occur if cortex is using the template managed config.yaml

Signed-off-by: Ken Haines <ken@kenhaines.net>

* updating ignore file

Signed-off-by: Ken Haines <ken@kenhaines.net>

* adding externalConfigVersion property and using it in deployment annotations for change updates

Signed-off-by: Ken Haines <ken@kenhaines.net>

--- a/values.yaml
+++ b/values.yaml
@@ -33,6 +33,9 @@ serviceAccount:
   annotations: {}
 
 
+useExternalConfig: false
+externalConfigSecretName: "secret-with-config.yaml"
+externalConfigVersion: "0"
 config:
   auth_enabled: false
   ingester:
