--- a/templates/table-manager-dep.yaml
+++ b/templates/table-manager-dep.yaml
@@ -23,6 +23,7 @@ spec:
       labels:
         app: {{ template "cortex.name" . }}-table-manager
         name: {{ template "cortex.name" . }}-table-manager
+        target: table-manager
         release: {{ .Release.Name }}
         {{- with .Values.table_manager.podLabels }}
         {{- toYaml . | nindent 8 }}
